--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/checkbox": "^0.4.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/google-signin": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.7",
