--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-maps": "^0.27.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-responsive-fontsize": "^0.4.3",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-svg": "^12.1.0",
