--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^7.14.2",
     "react": "16.9.0",
     "react-native": "^0.62.2",
+    "react-native-android-location-enabler": "^1.2.1",
     "react-native-auto-scrolling": "^2.0.0",
     "react-native-dialog": "^5.6.0",
     "react-native-elements": "^1.2.7",
